--- a/index.html
+++ b/index.html
@@ -113,12 +113,15 @@
         <h2 class="what-we-do">Czym się zajmujemy</h2>
         <ul class="portfolio-list-main">
           <li>
-            <img
-              src="images/coding-in-progress.jpg"
-              alt="coding in progress"
-              width="370"
-              height="294"
-            />
+            <div class="label-box">
+              <img
+                src="images/coding-in-progress.jpg"
+                alt="coding in progress"
+                width="370"
+                height="294"
+              />
+              <p class="label-content">Aplikacje komputerowe</p>
+            </div>
           </li>
           <li>
             <img
