--- a/portfolio.html
+++ b/portfolio.html
@@ -91,12 +91,22 @@
           </li>
           <li>
             <figure>
-              <img
-                src="images/portfolio/basketball.jpg"
-                alt="basketball"
-                width="370"
-                height="294"
-              />
+              <div class="overlay-box">
+                <img
+                  src="images/portfolio/basketball.jpg"
+                  alt="basketball"
+                  width="370"
+                  height="294"
+                />
+                <div class="overlay-content">
+                  <p>
+                    Technocrack jest popularną platformą wykorzystywaną do
+                    rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                    platformę do celów szpiegowskich i ataków na
+                    niezabezpieczone serwery konkurencji.
+                  </p>
+                </div>
+              </div>
               <figcaption>
                 <span class="project-names"
                   >Grafika New Orlean vs Golden Star</span
