--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <section class="service section">
         <div class="container">
           <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-          <button type="button">Zamów usługę</button>
+          <button type="button" data-modal-open>Zamów usługę</button>
         </div>
       </section>
       <section class="section">
@@ -380,5 +380,17 @@
         </div>
       </div>
     </footer>
+
+    <div class="modal is-hidden" data-modal>
+      <div class="modal-box">
+        <button data-modal-close>
+          <svg width="30" height="30">
+            <use href="images/icons.svg#icon-close-button"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+
+    <script src="./js/modal.js"></script>
   </body>
 </html>
