--- a/index.html
+++ b/index.html
@@ -124,20 +124,26 @@
             </div>
           </li>
           <li>
-            <img
-              src="images/not-yet-notch.jpg"
-              alt="not yet notch"
-              width="370"
-              height="294"
-            />
+            <div class="label-box">
+              <img
+                src="images/not-yet-notch.jpg"
+                alt="not yet notch"
+                width="370"
+                height="294"
+              />
+              <p class="label-content">Aplikacje mobilne</p>
+            </div>
           </li>
           <li>
-            <img
-              src="images/too-much-colours-for-me.jpg"
-              alt="too much colours for me"
-              width="370"
-              height="294"
-            />
+            <div class="label-box">
+              <img
+                src="images/too-much-colours-for-me.jpg"
+                alt="too much colours for me"
+                width="370"
+                height="294"
+              />
+              <p class="label-content">Rozwiązania graficzne</p>
+            </div>
           </li>
         </ul>
       </div>
@@ -384,7 +390,7 @@
     <div class="modal is-hidden" data-modal>
       <div class="modal-box">
         <button data-modal-close>
-          <svg width="30" height="30">
+          <svg width="11" height="11">
             <use href="images/icons.svg#icon-close-button"></use>
           </svg>
         </button>
