--- a/portfolio.html
+++ b/portfolio.html
@@ -77,12 +77,22 @@
         <ul class="portfolio-list">
           <li>
             <figure>
-              <img
-                src="images/portfolio/technocrack.jpg"
-                alt="technocrack"
-                width="370"
-                height="294"
-              />
+              <div class="overlay-box">
+                <img
+                  src="images/portfolio/technocrack.jpg"
+                  alt="technocrack"
+                  width="370"
+                  height="294"
+                />
+                <div class="overlay-content">
+                  <p>
+                    Technocrack jest popularną platformą wykorzystywaną do
+                    rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                    platformę do celów szpiegowskich i ataków na
+                    niezabezpieczone serwery konkurencji.
+                  </p>
+                </div>
+              </div>
               <figcaption>
                 <span class="project-names">Technocrack</span>
                 <span class="project-type">Strona internetowa</span>
@@ -117,12 +127,22 @@
           </li>
           <li>
             <figure>
-              <img
-                src="images/portfolio/seafood.jpg"
-                alt="seafood"
-                width="370"
-                height="294"
-              />
+              <div class="overlay-box">
+                <img
+                  src="images/portfolio/seafood.jpg"
+                  alt="seafood"
+                  width="370"
+                  height="294"
+                />
+                <div class="overlay-content">
+                  <p>
+                    Technocrack jest popularną platformą wykorzystywaną do
+                    rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                    platformę do celów szpiegowskich i ataków na
+                    niezabezpieczone serwery konkurencji.
+                  </p>
+                </div>
+              </div>
               <figcaption>
                 <span class="project-names">Restauracja Seafood</span>
                 <span class="project-type">Restauracja</span>
@@ -131,12 +151,22 @@
           </li>
           <li>
             <figure>
-              <img
-                src="images/portfolio/headphones.jpg"
-                alt="headphones"
-                width="370"
-                height="294"
-              />
+              <div class="overlay-box">
+                <img
+                  src="images/portfolio/headphones.jpg"
+                  alt="headphones"
+                  width="370"
+                  height="294"
+                />
+                <div class="overlay-content">
+                  <p>
+                    Technocrack jest popularną platformą wykorzystywaną do
+                    rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                    platformę do celów szpiegowskich i ataków na
+                    niezabezpieczone serwery konkurencji.
+                  </p>
+                </div>
+              </div>
               <figcaption>
                 <span class="project-names">Projekt Prime</span>
                 <span class="project-type">Marketing</span>
@@ -145,12 +175,22 @@
           </li>
           <li>
             <figure>
-              <img
-                src="images/portfolio/boxes.jpg"
-                alt="boxes"
-                width="370"
-                height="294"
-              />
+              <div class="overlay-box">
+                <img
+                  src="images/portfolio/boxes.jpg"
+                  alt="boxes"
+                  width="370"
+                  height="294"
+                />
+                <div class="overlay-content">
+                  <p>
+                    Technocrack jest popularną platformą wykorzystywaną do
+                    rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                    platformę do celów szpiegowskich i ataków na
+                    niezabezpieczone serwery konkurencji.
+                  </p>
+                </div>
+              </div>
               <figcaption>
                 <span class="project-names">Projekt Boxes</span>
                 <span class="project-type">Aplikacja</span>
@@ -159,12 +199,22 @@
           </li>
           <li>
             <figure>
-              <img
-                src="images/portfolio/imac.jpg"
-                alt="imac"
-                width="370"
-                height="294"
-              />
+              <div class="overlay-box">
+                <img
+                  src="images/portfolio/imac.jpg"
+                  alt="imac"
+                  width="370"
+                  height="294"
+                />
+                <div class="overlay-content">
+                  <p>
+                    Technocrack jest popularną platformą wykorzystywaną do
+                    rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                    platformę do celów szpiegowskich i ataków na
+                    niezabezpieczone serwery konkurencji.
+                  </p>
+                </div>
+              </div>
               <figcaption>
                 <span class="project-names">Inspiration has no Borders</span>
                 <span class="project-type">Strona internetowa</span>
@@ -173,12 +223,22 @@
           </li>
           <li>
             <figure>
-              <img
-                src="images/portfolio/magazine.jpg"
-                alt="magazine"
-                width="370"
-                height="294"
-              />
+              <div class="overlay-box">
+                <img
+                  src="images/portfolio/magazine.jpg"
+                  alt="magazine"
+                  width="370"
+                  height="294"
+                />
+                <div class="overlay-content">
+                  <p>
+                    Technocrack jest popularną platformą wykorzystywaną do
+                    rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                    platformę do celów szpiegowskich i ataków na
+                    niezabezpieczone serwery konkurencji.
+                  </p>
+                </div>
+              </div>
               <figcaption>
                 <span class="project-names">Magazyn Limited Edition</span>
                 <span class="project-type">Dizajn</span>
@@ -187,12 +247,22 @@
           </li>
           <li>
             <figure>
-              <img
-                src="images/portfolio/label.jpg"
-                alt="label"
-                width="370"
-                height="294"
-              />
+              <div class="overlay-box">
+                <img
+                  src="images/portfolio/label.jpg"
+                  alt="label"
+                  width="370"
+                  height="294"
+                />
+                <div class="overlay-content">
+                  <p>
+                    Technocrack jest popularną platformą wykorzystywaną do
+                    rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                    platformę do celów szpiegowskich i ataków na
+                    niezabezpieczone serwery konkurencji.
+                  </p>
+                </div>
+              </div>
               <figcaption>
                 <span class="project-names">Projekt LAB</span>
                 <span class="project-type">Marketing</span>
@@ -201,12 +271,22 @@
           </li>
           <li>
             <figure>
-              <img
-                src="images/portfolio/laptop.jpg"
-                alt="laptop"
-                width="370"
-                height="294"
-              />
+              <div class="overlay-box">
+                <img
+                  src="images/portfolio/laptop.jpg"
+                  alt="laptop"
+                  width="370"
+                  height="294"
+                />
+                <div class="overlay-content">
+                  <p>
+                    Technocrack jest popularną platformą wykorzystywaną do
+                    rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                    platformę do celów szpiegowskich i ataków na
+                    niezabezpieczone serwery konkurencji.
+                  </p>
+                </div>
+              </div>
               <figcaption>
                 <span class="project-names">Growing Business</span>
                 <span class="project-type">Marketing</span>
