--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             >Web<span class="header-studio">Studio</span></a
           >
           <ul class="nav-list">
-            <li><a href="#">Agencja</a></li>
+            <li><a class="nav-link-active" href="#">Agencja</a></li>
             <li>
-              <a href="portfolio.html">Portfolio</a>
+              <a class="nav-link-active" href="portfolio.html">Portfolio</a>
             </li>
-            <li><a href="#">Kontakt</a></li>
+            <li><a class="nav-link-active" href="#">Kontakt</a></li>
           </ul>
         </nav>
         <ul class="contact-list">
